# StellarPass-MonoRepo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stellar-pass-pitch.md  stellar-pass-technical-architecture.md
stellar-pass-contracts/contracts/escrow/: Cargo.toml
stellar-pass-contracts/contracts/escrow/src/: lib.rs
stellar-pass-contracts/contracts/escrow/test_snapshots/tests/: test_buy.1.json  test_buy_cancelled_listing.1.json  test_buy_seller_is_buyer.1.json  test_cancel_listing.1.json  test_cancel_listing_wrong_seller.1.json  test_create_listing.1.json  test_create_listing_price_exceeds_cap.1.json  test_create_listing_zero_price.1.json  test_get_active_listings.1.json  test_initialize.1.json  test_initialize_twice_panics.1.json  test_royalty_too_high.1.json  test_zero_royalty.1.json
stellar-pass-contracts/contracts/poap/: Cargo.toml
stellar-pass-contracts/contracts/poap/src/: lib.rs
stellar-pass-contracts/contracts/poap/test_snapshots/tests/: test_badges_of.1.json  test_initialize.1.json  test_initialize_twice_panics.1.json  test_metadata_integrity.1.json  test_mint.1.json  test_mint_duplicate_panics.1.json  test_multiple_users.1.json  test_no_transfer_function_exists.1.json  test_nonexistent_badge_panics.1.json
stellar-pass-contracts/contracts/ticket/: Cargo.toml
stellar-pass-contracts/contracts/ticket/src/: lib.rs
stellar-pass-contracts/contracts/ticket/test_snapshots/tests/: test_approve_and_clears_on_transfer.1.json  (+18 more)
(+134 files in other folders)
