[package]
name = "stellar_pass_escrow"
version = "0.1.0"
edition = "2021"
description = "Stellar Pass - Resale Escrow Soroban smart contract"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[features]
default = []
